--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://nivel0.tscn", "res://personaje.tscn")
-current_scene="res://personaje.tscn"
+current_scene="res://nivel0.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://personaje.gd", "res://plataforma.gd"]
+selected_script="res://plataforma.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
