--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -6,3 +6,7 @@ executable_path="C:/Users/USER/Downloads/Godot_v4.4.1-stable_win64.exe/Godot_v4.
 
 scenes=["res://personaje.tscn", "res://nivel0.tscn"]
 scripts=["res://personaje.gd", "res://plataforma.gd"]
+
+[dialog_bounds]
+
+create_new_node=Rect2(510, 190, 900, 700)
