--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://personaje.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Preview.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://nivel0.tscn", "res://personaje.tscn", "res://Objeto.tscn", "res://Level1.tscn", "res://Level2.tscn")
-current_scene="res://personaje.tscn"
+open_scenes=PackedStringArray("res://nivel0.tscn", "res://Level1.tscn", "res://Level2.tscn", "res://personaje.tscn", "res://Objeto.tscn", "res://hub.tscn")
+current_scene="res://Level1.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,7 +43,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://moneda.gd", "res://personaje.gd", "res://plataforma.gd"]
+open_scripts=["res://hub.gd", "res://moneda.gd", "res://personaje.gd", "res://plataforma.gd"]
 selected_script="res://personaje.gd"
 open_help=[]
 script_split_offset=200
@@ -61,3 +61,13 @@ open_shaders=[]
 split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=false
+log_filter_2=false
+log_filter_1=false
+log_filter_3=false
+log_filter_4=true
+collapse=false
+show_search=true
