--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,3 @@
 [selected_history]
 
-Texture2D=PackedStringArray("uid://b4kbmsfe417el", "uid://l6i6h5xbjsgo", "uid://udb2xr8h1ho3")
+Texture2D=PackedStringArray("uid://b4kbmsfe417el", "uid://udb2xr8h1ho3")
