--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Ship_portal_32x32.png")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://nivel0.tscn", "res://Level1.tscn", "res://Level2.tscn", "res://personaje.tscn", "res://Objeto.tscn", "res://hub.tscn")
-current_scene="res://Level2.tscn"
+current_scene="res://hub.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://hub.gd", "res://moneda.gd", "res://personaje.gd", "res://plataforma.gd"]
-selected_script="res://personaje.gd"
+open_scripts=["res://game_contador.gd", "res://hub.gd", "res://moneda.gd", "res://personaje.gd", "res://plataforma.gd"]
+selected_script="res://moneda.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -64,9 +64,9 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=false
-log_filter_2=false
-log_filter_1=false
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
 log_filter_3=false
 log_filter_4=true
 collapse=false
