--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 31.0,
+"row": 22,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
+"row": 19,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,30 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://contador.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 29,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 7,
+"selection_from_line": 6,
+"selection_to_column": 29,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -48,21 +66,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://game_contador.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
