--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://hub.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://plataforma.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://nivel0.tscn", "res://Level1.tscn", "res://Level2.tscn", "res://personaje.tscn", "res://moneda.tscn", "res://hub.tscn")
-current_scene="res://nivel0.tscn"
+current_scene="res://Level2.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=1
 
 [EditorWindow]
