--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://plataforma.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://hub.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -32,8 +32,8 @@ open_scenes=PackedStringArray("res://nivel0.tscn", "res://Level1.tscn", "res://L
 current_scene="res://Level2.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://contador.gd", "res://hub.gd", "res://moneda.gd", "res://personaje.gd", "res://plataforma.gd"]
-selected_script="res://hub.gd"
+selected_script="res://contador.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
