--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -2,3 +2,4 @@
 
 Texture2D=PackedStringArray("uid://b4kbmsfe417el", "uid://udb2xr8h1ho3")
 Font=PackedStringArray("uid://b7fa4wtpv15kj")
+AudioStream=PackedStringArray("uid://qsti6uh8u7hh", "uid://b4vj6hrbnipha")
