--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://hub.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://mario-coin.mp3")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://nivel0.tscn", "res://Level1.tscn", "res://Level2.tscn", "res://personaje.tscn", "res://moneda.tscn", "res://hub.tscn")
-current_scene="res://Level2.tscn"
+current_scene="res://nivel0.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://contador.gd", "res://hub.gd", "res://moneda.gd", "res://personaje.gd", "res://plataforma.gd"]
-selected_script="res://contador.gd"
+selected_script="res://moneda.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
